.metadata/.plugins/org.eclipse.cdt.ui/streamTut01.build.log
14:13:58 **** Build of configuration Debug for project streamTut01 ****
make all 
Building file: ../src/streamTut01.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/streamTut01.d" -MT"src/streamTut01.d" -o "src/streamTut01.o" "../src/streamTut01.cpp"
../src/streamTut01.cpp: In constructor ‘LogStatement::LogStatement(std::string)’:
../src/streamTut01.cpp:25:32: error: class ‘LogStatement’ does not have any field named ‘data’
  LogStatement(std::string s) : data(s), time_string( timestamp() )
                                ^
../src/streamTut01.cpp:25:41: error: class ‘LogStatement’ does not have any field named ‘time_string’
  LogStatement(std::string s) : data(s), time_string( timestamp() )
                                         ^
make: *** [src/streamTut01.o] Error 1

14:13:58 Build Finished (took 372ms)

